# DeepDWI

./: .gitignore  .gitmodules  LITERATURE.md  README.md  pyproject.toml  setup.py
configs/: learn_vae.yaml  maple.yaml  recon_vae.yaml  zsssl.yaml
data/: load.py  prep_maple_data.py
deepdwi/: lsqr.py  prep.py  util.py
deepdwi/models/: autoencoder.py  bloch.py  dims.py  mri.py  prox.py  resnet.py  unet.py
deepdwi/recons/: linsub.py  pi.ipynb  zsssl.py
examples/: README.md  comb_slice.py  learn_vae.py  plot_maple.py  plot_mask.py  recon_vae.py  run_llr.py  run_maple.py  run_muse.ipynb  run_muse_2shot.ipynb  run_muse_5shot_navi.ipynb  run_pi.ipynb  run_zsssl.ipynb  run_zsssl.py  vae_decoder_recon.py  vae_training.py
examples/2024-05-22_zsssl_0.7mm_21-dir_R2x2_vol1_scan1_kdat_slice_040_norm-kdat-1.0_navi_ResNet2D_ResBlock-12_kernel-3_ADMM_08_lamda-0.050_Adam_lr-0.000500_MixL1L2Loss/: zsssl.yaml
examples/2024-05-23_zsssl_0.7mm_21-dir_R2x2_vol1_scan1_kdat_slice_040_norm-kdat-1.0_self_ResNet2D_ResBlock-12_kernel-3_ADMM_08_lamda-0.050_Adam_lr-0.000500_MixL1L2Loss/: zsssl.yaml
examples/2024-08-26_zsssl_1.0mm_126-dir_R3x3_kdat_slice_000_norm-kdat-1.0_self_ResNet2D_ResBlock-12_kernel-3_ADMM_08_lamda-0.050_Adam_lr-0.000500_MixL1L2Loss/: zsssl.yaml
figures/: convert_svg.sh  fig1.tiff
figures/b3000/: README.md  plot.ipynb  plot_1.0mm_3_b1000.py  plot_1.0mm_3_b3000.py  run_llr.py  sbatch_llr.sh  sbatch_zsssl.sh  test.sh  train.sh
figures/convergence/: README.md  plot.py
figures/dti/: fit_fa.py  plot.py
tests/: test_fourier.py  test_lsqr.py  test_util.py
(+74 files in other folders)
