[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdwi"
authors = [
    {name = "Zhengguo Tan", email = "zhengguo.tan@gmail.com"},
]
description = "Deep diffusion-weighted imaging reconstruction"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [

]
dynamic = [
    "version"
]

[project.urls]
Homepage = "https://github.com/ZhengguoTan/DeepDWI"