[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdwi"
authors = [
    {name = "Zhengguo Tan", email = "zhengguo.tan@gmail.com"},
]
description = "Deep diffusion-weighted imaging reconstruction"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cupy-cuda12x",
    "h5py==3.10.0",
    "matplotlib",
    "numba==0.58.1",
    "numpy==1.26.3",
    "PyWavelets",
    "PyYaml",
    "scipy==1.11.4",
    "tqdm",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2"
]
dynamic = [
    "version"
]

[project.urls]
Homepage = "https://github.com/ZhengguoTan/DeepDWI"